fix scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,6 +79,10 @@ a {
 	padding: 0;
 }
 
+li {
+	padding: 0;
+}
+
 .dropdown ul {
 	max-height: 450px;
 	overflow-y: auto; 
